--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Install dependencies
         run: |
           go mod download
+      - name: Install wasmbrowsertest
+        run: |
+          echo $PATH
+          git clone -b fs-api-forwarding https://github.com/mlctrez/wasmbrowsertest /tmp/wasmbrowsertest
+          go mod -C /tmp/wasmbrowsertest download
+          go build -C /tmp/wasmbrowsertest -o /tmp/go_js_wasm_exec
       - name: Run Unit tests
         run: |
           go test -race -covermode atomic -coverprofile=covprofile .
@@ -23,8 +29,3 @@ jobs:
         env:
           COVERALLS_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
         run: goveralls -coverprofile=covprofile -service=github
-    # or use shogo82148/actions-goveralls
-    # - name: Send coverage
-    #   uses: shogo82148/actions-goveralls@v1
-    #   with:
-    #     path-to-profile: covprofile
