--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -26,7 +26,7 @@ jobs:
           go test -race -covermode atomic -coverprofile=covprofile_nowasm .
       - name: Run Unit tests using wasmbrowsertest
         run: |
-          GOOS=js GOARCH=wasm go test -cover -covermode atomic -test.coverprofile=covprofile_wasm .
+          GOOS=js GOARCH=wasm go test -cover -covermode atomic -test.coverprofile=covprofile_wasm ./...
       - name: Install gocovmerge
         run: |
           go install github.com/wadey/gocovmerge@latest
